welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: value unary_! is not a member of Int
	while ( (!getX()==largeur) && (!getY()==hauteur))
                 ^ColumnByColumn:6: error: value largeur is not a member of Int
	for ( i<- 0 largeur+hauteur() )
                    ^