welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	var hauteur=getMondeHauteur();
	var largeur=getMondeLargeur();
	var num =0 ;
	while ( (!getX()==largeur) && (!getY()==hauteur))
	for ( i<- 0 largeur+hauteur() )
	{
	ecritMessage()	
	}
}
